# osc25t

GitVerse Tasks/GitVerse_Task_1/: .dockerignore  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Makefile  Makefile.docker  README.md  docker-compose.yml  install_system-wide.sh  installation_dependencys.ps1  installation_dependencys.sh  pyproject.toml  pytest.ini  run_tests.py  setup.py  sysaudit.service  test-docker.ps1  test-docker.sh
GitVerse Tasks/GitVerse_Task_1/.github/workflows/: README.md  docker-ci.yml
GitVerse Tasks/GitVerse_Task_1/docs/: CLI_REFERENCE.md  CONFIGURATION.md  DOCKER_EXAMPLES.md  DOCKER_PIPELINE_SUMMARY.md  PERFORMANCE.md  PIPELINE_DIAGRAM.md  PIPELINE_OVERVIEW.md  QUICK_START_DOCKER.md  README_DOCKER.md  SECURITY.md  START_HERE.md  SYSTEMD_SERVICE.md  TESTING.md  TEST_DOCKER_README.md  USAGE_EXAMPLES.md
GitVerse Tasks/GitVerse_Task_1/examples/: README.md  alert_usage.py  blacklist.txt  cli_usage.py  compliance_usage.py  config-minimal.yaml  config.yaml  drift_usage.py  filter_usage.py  git_usage.py  monitor_usage.py  rollback_usage.py
GitVerse Tasks/GitVerse_Task_1/scripts/: generate_report.py  run-docker-tests.ps1  run-docker-tests.sh  show_report.py
GitVerse Tasks/GitVerse_Task_1/sysaudit/: __init__.py  __main__.py  cli.py  config.py  models.py  security.py
GitVerse Tasks/GitVerse_Task_1/sysaudit/alert/: __init__.py  manager.py
GitVerse Tasks/GitVerse_Task_1/sysaudit/compliance/: __init__.py  checker.py  reporter.py  rules.py  suid_sgid.py  weak_permissions.py  world_writable.py
GitVerse Tasks/GitVerse_Task_1/sysaudit/core/: __init__.py  engine.py
GitVerse Tasks/GitVerse_Task_1/sysaudit/git/: __init__.py  drift.py  manager.py  rollback.py  severity.py
GitVerse Tasks/GitVerse_Task_1/sysaudit/monitor/: __init__.py  file_monitor.py  filter.py  process_tracker.py
GitVerse Tasks/GitVerse_Task_1/tests/: README.md  __init__.py  conftest.py  test_alert_manager.py  test_compliance.py  test_compliance_rules.py  test_drift_detector.py  test_e2e_integration.py  test_engine.py  test_event_batching.py  test_file_monitor.py  test_filter.py  test_git_manager.py  test_performance.py  test_rollback_manager.py  test_security.py  test_severity_scoring.py  test_systemd_service.sh
GitVerse Tasks/GitVerse_Task_1/tests/e2e/: __init__.py  test_real_user_scenarios.py
SberTech Tasks/Task_2/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  QUICK_START.md  README.md  README_LINUX.md  TEST_RESULTS.md  build-docker.bat  build.bat  build.sh  clean_data.sh  docker-compose.yml  extract-binaries.sh  test-bench.sh  test-docker.bat  test_compaction.sh
SberTech Tasks/Task_2/docs/: ARCHITECTURE.md  BINARY_EXTRACTION.md  BUILD_AND_DEPLOYMENT.md  CRASH_RECOVERY_IMPLEMENTATION.md  REQUIREMENTS_VERIFICATION.md  USAGE_EXAMPLES.md  benchmark-running-in-WSL-results.txt
SberTech Tasks/Task_2/src/: checksum.rs  config.rs  engine.rs  entry.rs  error.rs  lib.rs  main.rs
SberTech Tasks/Task_2/src/cli/: mod.rs
SberTech Tasks/Task_2/src/compaction/: mod.rs
SberTech Tasks/Task_2/src/sst/: mod.rs  (+1 more)
SberTech Tasks/Task_3/: .gitignore  Cargo.toml  Dockerfile  README.md  test_ttl_wsl.sh  test_wsl.sh
SberTech Tasks/Task_3/scripts/: build_and_extract.bat  build_and_extract.sh  install_and_build.bat  install_and_build.sh
SberTech Tasks/Task_3/src/: common.rs  lib.rs
SberTech Tasks/Task_3/tests/: integration.rs
(+150 files in other folders)
