[package]
name = "uringkv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
io-uring = "0.6"
crossbeam-skiplist = "0.1"
dashmap = "5.5"
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
hdrhistogram = "7.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
