[package]
name = "secmem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "secmem-agent"
path = "src/bin/secmem-agent.rs"

[[bin]]
name = "secmemctl"
path = "src/bin/secmemctl.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.27", features = ["socket", "uio", "fs", "user"] }
libc = "0.2"
memfd = "0.6"
aes-gcm = { version = "0.10", features = ["aes"] }
aes = "0.8"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
humantime = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"